+ Mozilla compatibility, tested on Firefox (desktop) / Firefox OS (simulator). + Desktop click and scroll compatibility

--- a/examples/css/styles.css
+++ b/examples/css/styles.css
@@ -264,8 +264,8 @@ input[type="search"]::-webkit-search-cancel-button {
 /* line 184, ../../source/css/mootor/core/_normalize.scss */
 input[type="search"] {
   -webkit-appearance: textfield;
-  -webkit-box-sizing: content-box;
-  box-sizing: content-box;
+  /*    -webkit-box-sizing: content-box;
+      box-sizing: content-box;*/
 }
 
 /* line 193, ../../source/css/mootor/core/_normalize.scss */
@@ -376,21 +376,16 @@ strong {
 
 /* line 5, ../../source/css/mootor/nav/_panels.scss */
 body, html {
-  background: #ccc;
+  background: #dddddd;
   overflow-x: hidden;
-  overflow-y: hidden;
-  width: 100%;
-  height: 100%;
-  max-width: 100%;
-  max-height: 100%;
 }
 
-/* line 19, ../../source/css/mootor/nav/_panels.scss */
+/* line 14, ../../source/css/mootor/nav/_panels.scss */
 nav ul,
 nav ol {
   list-style: none;
 }
-/* line 22, ../../source/css/mootor/nav/_panels.scss */
+/* line 17, ../../source/css/mootor/nav/_panels.scss */
 nav a {
   text-decoration: none;
   text-align: left;
@@ -398,26 +393,21 @@ nav a {
   padding: 1em;
 }
 
-/* line 32, ../../source/css/mootor/nav/_panels.scss */
+/* line 27, ../../source/css/mootor/nav/_panels.scss */
 .moo-panels {
   position: absolute;
-  width: 100%;
-  left: 0;
-  min-height: 100%;
-  right: 0;
-  top: 0;
-  bottom: 0;
-  background: #dddddd;
 }
 
-/* line 42, ../../source/css/mootor/nav/_panels.scss */
+/* line 31, ../../source/css/mootor/nav/_panels.scss */
 .moo-panel {
-  min-height: 100%;
-  width: 100%;
   position: absolute;
+  z-index: 1;
+  width: 100%;
+  overflow: auto;
+  top: 0;
 }
 
-/* line 50, ../../source/css/mootor/nav/_panels.scss */
+/* line 41, ../../source/css/mootor/nav/_panels.scss */
 .moo-panels, .moo-panel {
   -webkit-transition-duration: 0;
   -webkit-backface-visibility: hidden;
@@ -700,192 +690,286 @@ nav a {
   -webkit-animation-direction: linear;
   -webkit-border-radius: 2.1em;
   -webkit-animation-delay: 0;
+  -moz-animation-duration: 1s;
+  -moz-animation-iteration-count: infinite;
+  -moz-animation-direction: linear;
+  -moz-border-radius: 2.1em;
+  -moz-animation-delay: 0;
+  animation-duration: 1s;
+  animation-iteration-count: infinite;
+  animation-direction: linear;
+  border-radius: 2.1em;
+  animation-delay: 0;
 }
 
 @keyframes moo-ui-loading-object-animation-0 {
-  /* line 44, ../../source/css/mootor/ui/_loading.scss */
+  /* line 56, ../../source/css/mootor/ui/_loading.scss */
   0% {
     opacity: 0;
   }
 
-  /* line 45, ../../source/css/mootor/ui/_loading.scss */
+  /* line 57, ../../source/css/mootor/ui/_loading.scss */
   25% {
     opacity: 1;
   }
 
-  /* line 46, ../../source/css/mootor/ui/_loading.scss */
+  /* line 58, ../../source/css/mootor/ui/_loading.scss */
   50% {
     opacity: 0;
   }
 
-  /* line 47, ../../source/css/mootor/ui/_loading.scss */
+  /* line 59, ../../source/css/mootor/ui/_loading.scss */
   75% {
     opacity: 0;
   }
 
-  /* line 48, ../../source/css/mootor/ui/_loading.scss */
+  /* line 60, ../../source/css/mootor/ui/_loading.scss */
   100% {
     opacity: 0;
   }
 }
 
 @-webkit-keyframes moo-ui-loading-object-animation-0 {
-  /* line 44, ../../source/css/mootor/ui/_loading.scss */
+  /* line 56, ../../source/css/mootor/ui/_loading.scss */
   0% {
     opacity: 0;
   }
 
-  /* line 45, ../../source/css/mootor/ui/_loading.scss */
+  /* line 57, ../../source/css/mootor/ui/_loading.scss */
   25% {
     opacity: 1;
   }
 
-  /* line 46, ../../source/css/mootor/ui/_loading.scss */
+  /* line 58, ../../source/css/mootor/ui/_loading.scss */
   50% {
     opacity: 0;
   }
 
-  /* line 47, ../../source/css/mootor/ui/_loading.scss */
+  /* line 59, ../../source/css/mootor/ui/_loading.scss */
   75% {
     opacity: 0;
   }
 
-  /* line 48, ../../source/css/mootor/ui/_loading.scss */
+  /* line 60, ../../source/css/mootor/ui/_loading.scss */
+  100% {
+    opacity: 0;
+  }
+}
+
+@-moz-keyframes moo-ui-loading-object-animation-0 {
+  /* line 56, ../../source/css/mootor/ui/_loading.scss */
+  0% {
+    opacity: 0;
+  }
+
+  /* line 57, ../../source/css/mootor/ui/_loading.scss */
+  25% {
+    opacity: 1;
+  }
+
+  /* line 58, ../../source/css/mootor/ui/_loading.scss */
+  50% {
+    opacity: 0;
+  }
+
+  /* line 59, ../../source/css/mootor/ui/_loading.scss */
+  75% {
+    opacity: 0;
+  }
+
+  /* line 60, ../../source/css/mootor/ui/_loading.scss */
   100% {
     opacity: 0;
   }
 }
 
 @keyframes moo-ui-loading-object-animation-1 {
-  /* line 58, ../../source/css/mootor/ui/_loading.scss */
+  /* line 73, ../../source/css/mootor/ui/_loading.scss */
   0% {
     opacity: 0;
   }
 
-  /* line 59, ../../source/css/mootor/ui/_loading.scss */
+  /* line 74, ../../source/css/mootor/ui/_loading.scss */
   25% {
     opacity: 0;
   }
 
-  /* line 60, ../../source/css/mootor/ui/_loading.scss */
+  /* line 75, ../../source/css/mootor/ui/_loading.scss */
   50% {
     opacity: 1;
   }
 
-  /* line 61, ../../source/css/mootor/ui/_loading.scss */
+  /* line 76, ../../source/css/mootor/ui/_loading.scss */
   75% {
     opacity: 0;
   }
 
-  /* line 62, ../../source/css/mootor/ui/_loading.scss */
+  /* line 77, ../../source/css/mootor/ui/_loading.scss */
   100% {
     opacity: 0;
   }
 }
 
 @-webkit-keyframes moo-ui-loading-object-animation-1 {
-  /* line 58, ../../source/css/mootor/ui/_loading.scss */
+  /* line 73, ../../source/css/mootor/ui/_loading.scss */
   0% {
     opacity: 0;
   }
 
-  /* line 59, ../../source/css/mootor/ui/_loading.scss */
+  /* line 74, ../../source/css/mootor/ui/_loading.scss */
   25% {
     opacity: 0;
   }
 
-  /* line 60, ../../source/css/mootor/ui/_loading.scss */
+  /* line 75, ../../source/css/mootor/ui/_loading.scss */
   50% {
     opacity: 1;
   }
 
-  /* line 61, ../../source/css/mootor/ui/_loading.scss */
+  /* line 76, ../../source/css/mootor/ui/_loading.scss */
   75% {
     opacity: 0;
   }
 
-  /* line 62, ../../source/css/mootor/ui/_loading.scss */
+  /* line 77, ../../source/css/mootor/ui/_loading.scss */
+  100% {
+    opacity: 0;
+  }
+}
+
+@-moz-keyframes moo-ui-loading-object-animation-1 {
+  /* line 73, ../../source/css/mootor/ui/_loading.scss */
+  0% {
+    opacity: 0;
+  }
+
+  /* line 74, ../../source/css/mootor/ui/_loading.scss */
+  25% {
+    opacity: 0;
+  }
+
+  /* line 75, ../../source/css/mootor/ui/_loading.scss */
+  50% {
+    opacity: 1;
+  }
+
+  /* line 76, ../../source/css/mootor/ui/_loading.scss */
+  75% {
+    opacity: 0;
+  }
+
+  /* line 77, ../../source/css/mootor/ui/_loading.scss */
   100% {
     opacity: 0;
   }
 }
 
 @keyframes moo-ui-loading-object-animation-2 {
-  /* line 72, ../../source/css/mootor/ui/_loading.scss */
+  /* line 90, ../../source/css/mootor/ui/_loading.scss */
   0% {
     opacity: 0;
   }
 
-  /* line 73, ../../source/css/mootor/ui/_loading.scss */
+  /* line 91, ../../source/css/mootor/ui/_loading.scss */
   25% {
     opacity: 0;
   }
 
-  /* line 74, ../../source/css/mootor/ui/_loading.scss */
+  /* line 92, ../../source/css/mootor/ui/_loading.scss */
   50% {
     opacity: 0;
   }
 
-  /* line 75, ../../source/css/mootor/ui/_loading.scss */
+  /* line 93, ../../source/css/mootor/ui/_loading.scss */
   75% {
     opacity: 1;
   }
 
-  /* line 76, ../../source/css/mootor/ui/_loading.scss */
+  /* line 94, ../../source/css/mootor/ui/_loading.scss */
   100% {
     opacity: 0;
   }
 }
 
 @-webkit-keyframes moo-ui-loading-object-animation-2 {
-  /* line 72, ../../source/css/mootor/ui/_loading.scss */
+  /* line 90, ../../source/css/mootor/ui/_loading.scss */
   0% {
     opacity: 0;
   }
 
-  /* line 73, ../../source/css/mootor/ui/_loading.scss */
+  /* line 91, ../../source/css/mootor/ui/_loading.scss */
   25% {
     opacity: 0;
   }
 
-  /* line 74, ../../source/css/mootor/ui/_loading.scss */
+  /* line 92, ../../source/css/mootor/ui/_loading.scss */
   50% {
     opacity: 0;
   }
 
-  /* line 75, ../../source/css/mootor/ui/_loading.scss */
+  /* line 93, ../../source/css/mootor/ui/_loading.scss */
   75% {
     opacity: 1;
   }
 
-  /* line 76, ../../source/css/mootor/ui/_loading.scss */
+  /* line 94, ../../source/css/mootor/ui/_loading.scss */
   100% {
     opacity: 0;
   }
 }
 
-/* line 85, ../../source/css/mootor/ui/_loading.scss */
+@-moz-keyframes moo-ui-loading-object-animation-2 {
+  /* line 90, ../../source/css/mootor/ui/_loading.scss */
+  0% {
+    opacity: 0;
+  }
+
+  /* line 91, ../../source/css/mootor/ui/_loading.scss */
+  25% {
+    opacity: 0;
+  }
+
+  /* line 92, ../../source/css/mootor/ui/_loading.scss */
+  50% {
+    opacity: 0;
+  }
+
+  /* line 93, ../../source/css/mootor/ui/_loading.scss */
+  75% {
+    opacity: 1;
+  }
+
+  /* line 94, ../../source/css/mootor/ui/_loading.scss */
+  100% {
+    opacity: 0;
+  }
+}
+
+/* line 105, ../../source/css/mootor/ui/_loading.scss */
 .moo-loading-circle-01 {
   -webkit-animation-name: moo-ui-loading-object-animation-0;
+  -moz-animation-name: moo-ui-loading-object-animation-0;
   animation-name: moo-ui-loading-object-animation-0;
 }
 
-/* line 89, ../../source/css/mootor/ui/_loading.scss */
+/* line 110, ../../source/css/mootor/ui/_loading.scss */
 .moo-loading-circle-02 {
   -webkit-animation-name: moo-ui-loading-object-animation-1;
+  -moz-animation-name: moo-ui-loading-object-animation-1;
   animation-name: moo-ui-loading-object-animation-1;
 }
 
-/* line 93, ../../source/css/mootor/ui/_loading.scss */
+/* line 115, ../../source/css/mootor/ui/_loading.scss */
 .moo-loading-circle-03 {
   -webkit-animation-name: moo-ui-loading-object-animation-2;
+  -moz-animation-name: moo-ui-loading-object-animation-2;
   animation-name: moo-ui-loading-object-animation-2;
 }
 
 /*
  * Wheel 
  */
-/* line 103, ../../source/css/mootor/ui/_loading.scss */
+/* line 126, ../../source/css/mootor/ui/_loading.scss */
 .moo-ui-loading {
   position: absolute;
   top: 50%;
@@ -894,7 +978,7 @@ nav a {
   -webkit-animation-duration: 1.5s;
 }
 
-/* line 111, ../../source/css/mootor/ui/_loading.scss */
+/* line 134, ../../source/css/mootor/ui/_loading.scss */
 .moo-ui-loading {
   height: 0;
   width: 0;
@@ -904,11 +988,11 @@ nav a {
   -webkit-animation-iteration-count: infinite;
   -webkit-animation-timing-function: steps(8, start);
 }
-/* line 119, ../../source/css/mootor/ui/_loading.scss */
+/* line 142, ../../source/css/mootor/ui/_loading.scss */
 .moo-ui-loading.moo-hidden {
   display: none;
 }
-/* line 122, ../../source/css/mootor/ui/_loading.scss */
+/* line 145, ../../source/css/mootor/ui/_loading.scss */
 .moo-ui-loading .moo-ui-loading-block {
   height: 3em;
   width: 1em;
@@ -917,54 +1001,54 @@ nav a {
   top: -1.5em;
   left: -0.5em;
 }
-/* line 130, ../../source/css/mootor/ui/_loading.scss */
+/* line 153, ../../source/css/mootor/ui/_loading.scss */
 .moo-ui-loading .moo-loading-01 {
   background-color: white;
   -webkit-transform: rotate(-90deg) translate(0, -3em);
 }
-/* line 134, ../../source/css/mootor/ui/_loading.scss */
+/* line 157, ../../source/css/mootor/ui/_loading.scss */
 .moo-ui-loading .moo-loading-02 {
   background-color: white;
   -webkit-transform: rotate(-45deg) translate(0, -3em);
 }
-/* line 138, ../../source/css/mootor/ui/_loading.scss */
+/* line 161, ../../source/css/mootor/ui/_loading.scss */
 .moo-ui-loading .moo-loading-03 {
   background-color: #f2f2f2;
   -webkit-transform: rotate(0deg) translate(0, -3em);
 }
-/* line 142, ../../source/css/mootor/ui/_loading.scss */
+/* line 165, ../../source/css/mootor/ui/_loading.scss */
 .moo-ui-loading .moo-loading-04 {
   background-color: #d2d2d2;
   -webkit-transform: rotate(45deg) translate(0, -3em);
 }
-/* line 146, ../../source/css/mootor/ui/_loading.scss */
+/* line 169, ../../source/css/mootor/ui/_loading.scss */
 .moo-ui-loading .moo-loading-05 {
   background-color: #b3b3b3;
   -webkit-transform: rotate(90deg) translate(0, -3em);
 }
-/* line 150, ../../source/css/mootor/ui/_loading.scss */
+/* line 173, ../../source/css/mootor/ui/_loading.scss */
 .moo-ui-loading .moo-loading-06 {
   background-color: #939393;
   -webkit-transform: rotate(135deg) translate(0, -3em);
 }
-/* line 154, ../../source/css/mootor/ui/_loading.scss */
+/* line 177, ../../source/css/mootor/ui/_loading.scss */
 .moo-ui-loading .moo-loading-07 {
   background-color: #737373;
   -webkit-transform: rotate(180deg) translate(0, -3em);
 }
-/* line 158, ../../source/css/mootor/ui/_loading.scss */
+/* line 181, ../../source/css/mootor/ui/_loading.scss */
 .moo-ui-loading .moo-loading-08 {
   background-color: #535353;
   -webkit-transform: rotate(-135deg) translate(0, -3em);
 }
 
 @-webkit-keyframes rotateThis {
-  /* line 165, ../../source/css/mootor/ui/_loading.scss */
+  /* line 188, ../../source/css/mootor/ui/_loading.scss */
   from {
     -webkit-transform: rotate(0deg);
   }
 
-  /* line 166, ../../source/css/mootor/ui/_loading.scss */
+  /* line 189, ../../source/css/mootor/ui/_loading.scss */
   to {
     -webkit-transform: rotate(360deg);
   }
