+ Authors for CSS code

--- a/source/css/mootor.scss
+++ b/source/css/mootor.scss
@@ -1,3 +1,10 @@
+/**
+ * @summary Mootor CSS
+ * @author Emilio Mariscal (emi420 [at] gmail.com)
+ * @author Martín Szyszlican (martinsz [at] gmail.com)
+ * @author Natalia Petit
+ */
+
 @import "normalize";
 @import "panel";
 
