--- a/source/css/mootor/nav/_panels.scss
+++ b/source/css/mootor/nav/_panels.scss
@@ -5,7 +5,7 @@ $color-nav-panels-bg: $color-light-grey !default;
 body, html {
     background: $color-nav-panels-bg;
     overflow-x: hidden;
-    overflow-y: scroll;
+    overflow-y: hidden;
 }
 
 // Navigation
@@ -34,7 +34,7 @@ nav {
     position: absolute;
     z-index: 1;
     width: 100%;
-    overflow:auto;
+    overflow:hidden;
     top: 0; 
     min-height: 100%;
 }
