--- a/source/css/mootor.scss
+++ b/source/css/mootor.scss
@@ -7,16 +7,53 @@
 
 @import "compass/reset/utilities";
 
-body, html {
-    overflow-x: hidden;
-    overflow-y: auto;
+.m-app-html {
+	@include reset-box-model;
+
+	width: 100%;
+	height: 100%;
+
 }
 
-
-.moo-app {
+.m-app {
 	@include nested-reset;
+	@include reset-box-model;
+    overflow: hidden;
+
+	width: 100%;
+	height: 100%;
 
 	@import "panel";
+
+}
+
+.m-panel-container {
+	position: relative;
+
+	width: 100%;
+	height: 100%;
+}
+
+.m-doc {
+	&,* {
+		border: 1px solid black !important;
+		padding: 0.5em !important;
+		margin: 1em !important;
+		background: rgba(0,0,0,0.1) !important;
+	}
+
+	&.m-app-html,
+	.m-app {
+		width: calc(100% - 4em);
+		height: calc(100% - 4em);
+
+		.m-panel-container,
+		.m-panel {
+			width: calc(100% - 3em);
+			height: calc(100% - 4em);
+		}
+
+	}
 
 }
 
