Improvements and fixes

--- a/source/spec/views/index/index.html
+++ b/source/spec/views/index/index.html
@@ -1,3 +1,3 @@
-<div class="viewcontent">
-    <button id="buttonGoToView1">Go to 'view1'</butotn>    
-</div>
+<h2>Index</h2>
+<button id="buttonView1">Test</button>   
+     
