--- a/source/spec/views/testview/testview.html
+++ b/source/spec/views/testview/testview.html
@@ -1,3 +1,2 @@
-<div class="viewcontent">
-    <button id="buttonGoToIndex">Go to index</butotn>    
-</div>
+<h2>Testview</h2>
+<button id="buttonView2">Test</button>   
