--- a/source/css/_panel.scss
+++ b/source/css/_panel.scss
@@ -1,5 +1,3 @@
-@import "compass/css3/transition";
-
 .m-panel {
     position: absolute;
     width: 100%;
@@ -7,25 +5,9 @@
     top: 0; 
     left: 0;
     opacity: 0.5;
+    overflow: auto;
    
 
     background: #fa0;
-
-    // Prevents flicker on transform3d (iOS)    
-    -webkit-transition-duration:0;
-    -webkit-backface-visibility: hidden;
-    -webkit-transform:translate3d(0,0,0);
-    -webkit-transform: translateZ(0);
-
-    &.m-transition-slide {
-        @include transition(left 1s ease-in-out);
-    }
-
-    &.m-transition-none {
-        @include transition(none);
-    }
-
-
-
 }
 
