--- a/source/css/mootor.scss
+++ b/source/css/mootor.scss
@@ -6,6 +6,9 @@
  */
 
 @import "compass/reset/utilities";
+@import "compass/css3/transition";
+
+$transitionDuration: 1s;
 
 .m-html {
 	@include reset-box-model;
@@ -32,6 +35,21 @@
 
 	width: 100%;
 	height: 100%;
+}
+
+.m-transition-slide {
+    // Prevents flicker on transform3d (iOS)    
+    -webkit-transition-duration:0;
+    -webkit-backface-visibility: hidden;
+    -webkit-transform:translate3d(0,0,0);
+    -webkit-transform: translateZ(0);
+
+    @include transition(left $transitionDuration ease-in-out);
+
+}
+
+.m-transition-none {
+    @include transition(none);
 }
 
 .m-hidden {
