Some HTML/CSS (from Semantic UI) for testing

--- a/source/spec/views/index/index.html
+++ b/source/spec/views/index/index.html
@@ -1,3 +1,30 @@
-<h2>Index</h2>
-<button id="buttonView1">Test</button>   
-     
+<div class="index-view">
+
+    <div class="ui form segment">
+      <div class="field">
+        <label>Username</label>
+        <div class="ui left labeled icon input">
+          <input placeholder="Username" type="text">
+          <i class="user icon"></i>
+          <div class="ui corner label">
+            <i class="icon asterisk"></i>
+          </div>
+        </div>
+      </div>
+      <div class="field">
+        <label>Password</label>
+        <div class="ui left labeled icon input">
+          <input type="password">
+          <i class="lock icon"></i>
+          <div class="ui corner label">
+            <i class="icon asterisk"></i>
+          </div>
+        </div>
+      </div>
+      <div class="ui error message">
+        <div class="header">We noticed some issues</div>
+      </div>
+      <div class="ui blue submit button" id="btnLogin">Login</div>
+    </div>
+
+</div>
