--- a/source/spec/views/testview/testview.html
+++ b/source/spec/views/testview/testview.html
@@ -1,2 +1,6 @@
-<h2>Testview</h2>
-<button id="buttonView2">Test</button>   
+<div style="text-align: center; padding: 2em">
+    <button id="btnOk" class="large ui button">
+      <i class="checkmark icon"></i>
+      Ok, go back
+    </button>
+</div>
