+ Zepto touch module. + Improvement on test app

--- a/source/spec/views/index/index.html
+++ b/source/spec/views/index/index.html
@@ -2,9 +2,9 @@
 
     <div class="ui form segment">
       <div class="field">
-        <label>Username</label>
+        <label>E-mail</label>
         <div class="ui left labeled icon input">
-          <input placeholder="Username" type="text">
+          <input id="inputEmail" placeholder="E-mail" type="text">
           <i class="user icon"></i>
           <div class="ui corner label">
             <i class="icon asterisk"></i>
