--- a/source/spec/views/testview/testview.html
+++ b/source/spec/views/testview/testview.html
@@ -1,6 +1,20 @@
-<div style="text-align: center; padding: 2em">
-    <button id="btnOk" class="large ui button">
-      <i class="checkmark icon"></i>
-      Ok, go back
-    </button>
+<div style="text-align: center; padding: 1em">
+    <div class="ui message">
+      <div class="header">
+        Welcome back!
+      </div>
+      <p>
+        It's good to see you again. I have had a lot to think about since our last visit, I've changed much as a person and I can see that you have too.
+      </p>
+      <p>
+        Perhaps we can talk about it if you have the time.
+      </p>
+
+      <button id="btnOk" class="large ui button">
+        <i class="checkmark icon"></i>
+        Ok, go back
+      </button>
+
+    </div>
+    
 </div>
