+ Working panel transition (slide from right). + Improvements on test app

--- a/source/css/_panel.scss
+++ b/source/css/_panel.scss
@@ -11,3 +11,12 @@
     background: #fa0;
 }
 
+// Hacks
+
+.m-panel {
+    // Prevents flicker on transform3d (iOS)    
+    -webkit-transition-duration:0;
+    -webkit-backface-visibility: hidden;
+    -webkit-transform:translate3d(0,0,0);
+    -webkit-transform: translateZ(0);
+}
