--- a/source/spec/views/index/index.html
+++ b/source/spec/views/index/index.html
@@ -14,7 +14,7 @@
       <div class="field">
         <label>Password</label>
         <div class="ui left labeled icon input">
-          <input type="password">
+          <input  id="inputPass" type="password">
           <i class="lock icon"></i>
           <div class="ui corner label">
             <i class="icon asterisk"></i>
