--- a/source/spec/views/testview/testview.html
+++ b/source/spec/views/testview/testview.html
@@ -1,7 +1,7 @@
 <div style="text-align: center; padding: 1em">
     <div class="ui message">
       <div class="header">
-        Welcome back!
+        <span id="welcomeName"></span> welcome back!
       </div>
       <p>
         It's good to see you again. I have had a lot to think about since our last visit, I've changed much as a person and I can see that you have too.
