--- a/source/css/_panel.scss
+++ b/source/css/_panel.scss
@@ -3,7 +3,6 @@
     width: 100%;
     height: 100%;
     top: 0; 
-    left: 0;
     opacity: 0.5;
     overflow: auto;
     background: #fa0;
@@ -17,4 +16,25 @@
     -webkit-backface-visibility: hidden;
     -webkit-transform:translate3d(0,0,0);
     -webkit-transform: translateZ(0);
+}
+
+
+.m-double-width {
+    width: 200%;
+}
+
+.m-full-width {
+    width: 100%;
+}
+
+.m-half-width {
+    width: 50%;
+}
+
+.m-panel-position-left {
+    left: 0;
+}
+
+.m-panel-position-right {
+    left: 100%;
 }
