--- a/source/css/_panel.scss
+++ b/source/css/_panel.scss
@@ -1,40 +1,26 @@
-.m-panel {
-    position: absolute;
+.m-views-container {
+    position: relative;
+
     width: 100%;
     height: 100%;
-    top: 0; 
-    opacity: 0.5;
-    overflow: auto;
-    background: #fa0;
+
+    .m-panel {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        top: 0; 
+        overflow: auto;
+    }
+
+    // Hacks
+
+    .m-panel {
+        // Prevents flicker on transform3d (iOS)    
+        -webkit-transition-duration:0;
+        -webkit-backface-visibility: hidden;
+        -webkit-transform:translate3d(0,0,0);
+        -webkit-transform: translateZ(0);
+    }
+
 }
 
-// Hacks
-
-.m-panel {
-    // Prevents flicker on transform3d (iOS)    
-    -webkit-transition-duration:0;
-    -webkit-backface-visibility: hidden;
-    -webkit-transform:translate3d(0,0,0);
-    -webkit-transform: translateZ(0);
-}
-
-
-.m-double-width {
-    width: 200%;
-}
-
-.m-full-width {
-    width: 100%;
-}
-
-.m-half-width {
-    width: 50%;
-}
-
-.m-panel-position-left {
-    left: 0;
-}
-
-.m-panel-position-right {
-    left: 100%;
-}
