--- a/source/css/_panel.scss
+++ b/source/css/_panel.scss
@@ -9,7 +9,9 @@
         width: 100%;
         height: 100%;
         top: 0; 
-        overflow: auto;
+        -webkit-overflow-scrolling: touch;
+        overflow-y: scroll;
+        overflow-x: hidden;
     }
 
     // Hacks
@@ -23,4 +25,6 @@
     }
 
 }
+
+
 
