--- a/source/css/_utils.scss
+++ b/source/css/_utils.scss
@@ -1,7 +1,7 @@
 .m-hidden {
 	display: none;
 }
-	
+
 .m-double-width {
     width: 200%;
 }
@@ -20,4 +20,27 @@
 
 .m-position-right {
     left: 100%;
+}
+
+.m-doc {
+	&,* {
+		border: 1px solid black !important;
+		padding: 0.5em !important;
+		margin: 1em !important;
+		background: rgba(0,0,0,0.1) !important;
+	}
+
+	&.m-html,
+	.m-app {
+		width: calc(100% - 4em);
+		height: calc(100% - 4em);
+
+		.m-views-container,
+		.m-panel {
+			width: calc(100% - 3em);
+			height: calc(100% - 4em);
+		}
+
+	}
+
 }
