--- a/source/css/mootor.scss
+++ b/source/css/mootor.scss
@@ -29,6 +29,10 @@
 
 // TODO: move this code to another file
 
+body {
+    font-family: arial;
+}
+
 header {
     position: absolute;
     top: 0;
@@ -37,6 +41,12 @@ header {
     background: #072F52;
     height: 55px;
     z-index: 9999;
+    h1 {
+        text-align: center;
+        color: #f1f1f1;
+        font-weight: bold;
+        line-height: 55px !important;
+    }
 }
 .m-panel {
     padding-top: 55px !important;
