Improvements on test app

--- a/source/css/mootor.scss
+++ b/source/css/mootor.scss
@@ -44,7 +44,8 @@ header {
     h1 {
         text-align: center;
         color: #f1f1f1;
-        font-weight: bold;
+        // FIXME CHECK
+        font-weight: bold !important;
         line-height: 55px !important;
     }
 }
