Adding overthrow to fix scroll

--- a/source/css/mootor.scss
+++ b/source/css/mootor.scss
@@ -39,10 +39,6 @@ header {
     z-index: 9999;
 }
 .m-panel {
-    padding-top: 55px !important;
-}
-
-body, html {
-    overflow-x: hidden;
-    overflow-y: hidden;
+	top: 55px !important;
+	bottom: 20px;
 }
