Header CSS Fixes for iOS

--- a/source/css/_panel.scss
+++ b/source/css/_panel.scss
@@ -5,6 +5,7 @@
     height: 100%;
     box-sizing: border-box;
     padding-bottom: 55px;
+    overflow: hidden;
 
     .m-panel {
         position: relative;
