New type of panel animations - now panels are relative

--- a/source/css/_utils.scss
+++ b/source/css/_utils.scss
@@ -8,6 +8,7 @@
 
 .m-full-width {
     width: 100%;
+    border: 1px solid green;
 }
 
 .m-half-width {
@@ -19,7 +20,7 @@
 }
 
 .m-position-right {
-    left: 100%;
+    float: right !important;
 }
 
 .m-doc {
