--- a/source/css/_panel.scss
+++ b/source/css/_panel.scss
@@ -3,17 +3,17 @@
 
     width: 100%;
     height: 100%;
+    -webkit-box-sizing: border-box;
     box-sizing: border-box;
     padding-bottom: 55px;
-    overflow: hidden;
 
     .m-panel {
         position: relative;
-        width: 100%;
         height: 100%;
         top: 0; 
         -webkit-overflow-scrolling: touch;
         overflow-x: hidden;
+        float: left;
     }
 
     // Hacks
