Fixed: Text going over the header in Android 2.2 Improved: Now it detects the transformation duration by inspecting the CSS classes Improved: Now panel is a dumb ui class, uiview and uiapp handle all the logic.

--- a/examples/css/semantic.css
+++ b/examples/css/semantic.css
@@ -14836,11 +14836,13 @@ a.ui.nag {
             Sidebar
 *******************************/
 
+/* DISABLED BODY TRANSITION FOR MOOTOR DEMO
 body {
   -webkit-transition: margin 0.3s ease, -webkit-transform 0.3s ease;
   transition: margin 0.3s ease,
     transform 0.3s ease;
 }
+*/
 
 .ui.sidebar {
   position: fixed;
