--- a/source/css/_panel.scss
+++ b/source/css/_panel.scss
@@ -10,6 +10,7 @@
     .m-panel {
         position: relative;
         height: 100%;
+        width: 50%;
         top: 0; 
         -webkit-overflow-scrolling: touch;
         overflow-x: hidden;
