Nootebook example app: Now uses Voolks API. Update/PUT still missing.

--- a/examples/nootebook/views/compose/compose.html
+++ b/examples/nootebook/views/compose/compose.html
@@ -2,8 +2,11 @@
     <div class="ui message">
 
 
-      <div class="header">
+      <div class="header new">
         Nueva nota
+      </div>
+      <div class="header edit">
+        Editar nota
       </div>
       <br />
         <textarea id="note"></textarea>
