--- a/source/css/mootor.scss
+++ b/source/css/mootor.scss
@@ -5,32 +5,19 @@
  * @author Natalia Petit
  */
 
-@import "compass/reset/utilities";
+@import "compass/reset";
 
-.m-html {
-	@include reset-box-model;
-
+html, body {
 	width: 100%;
 	height: 100%;
 	overflow: hidden;
 }
 
 .m-app {
-	@include nested-reset;
-	@include reset-box-model;
-    overflow: hidden;
-	width: 100%;
-	height: 100%;
-
 	@import "config";
+	@import "fonts";
 	@import "panel";
 	@import "header";
 	@import "transitions";
 	@import "utils";
-}
-
-// TODO: move this code to another file
-
-body {
-    font-family: arial;
 }
