--- a/examples/demo/views/testview/testview.html
+++ b/examples/demo/views/testview/testview.html
@@ -1,3 +1,13 @@
+<header>
+    <nav class="m-nav-left">
+        <a class="m-nav-back" href="#app:goBack">Back</a>
+    </nav>
+    <h1>Form</h1>
+    <nav class="m-nav-right">
+        <a href="#save">Save</a>
+    </nav>
+</header>
+
 <div style="text-align: center; padding: 1em">
     <div class="ui message">
 
