New tests for adding events on view's html elements

--- a/source/spec/views/index/index.html
+++ b/source/spec/views/index/index.html
@@ -19,6 +19,11 @@
           <div class="ui corner label">
             <i class="icon asterisk"></i>
           </div>
+          <div id="initElement">initElement</div>
+          <div id="loadElement"></div>
+          <div id="beforeLoadElement"></div>
+          <div id="unloadElement"></div>
+          <div id="beforeUnloadElement"></div>
         </div>
       </div>
       <div class="ui blue submit button" id="btnLogin">Login</div>
