Fix for event-firing order and a couple of css corrections

--- a/source/css/_uiheader.scss
+++ b/source/css/_uiheader.scss
@@ -7,8 +7,7 @@ header {
     h1 {
         text-align: center;
         color: #f1f1f1;
-        // FIXME CHECK
-        font-weight: bold !important;
-        line-height: 55px !important;
+        font-weight: bold;
+        line-height: 55px;
     }
 }
