+ Bugfix on View/UIPanel event, updated example app 'demo'

--- a/examples/demo/views/testview/testview.html
+++ b/examples/demo/views/testview/testview.html
@@ -1,5 +1,5 @@
 <header>
-    <h1>Form</h1>
+    <h1>Welcome</h1>
 </header>
 
 <div style="text-align: center; padding: 1em">
@@ -7,7 +7,7 @@
 
 
       <div class="header">
-        <span id="welcomeName"></span> welcome!
+        Hello <span class="welcomeName" id="welcomeName"></span>!
       </div>
       <br />
         It's good to see you again. I have had a lot to think about since our last visit, I've changed much as a person and I can see that you have too.
