--- a/examples/demo/views/index/index.html
+++ b/examples/demo/views/index/index.html
@@ -2,26 +2,16 @@
 
     <div class="ui form segment">
       <div class="field">
-        <label>E-mail</label>
+        <label>Your name</label>
         <div class="ui left labeled icon input">
-          <input id="inputEmail" placeholder="E-mail" type="text">
+          <input id="inputEmail" placeholder="Fullname or nickname" type="text">
           <i class="user icon"></i>
           <div class="ui corner label">
             <i class="icon asterisk"></i>
           </div>
         </div>
       </div>
-      <div class="field">
-        <label>Password</label>
-        <div class="ui left labeled icon input">
-          <input  id="inputPass" type="password">
-          <i class="lock icon"></i>
-          <div class="ui corner label">
-            <i class="icon asterisk"></i>
-          </div>
-        </div>
-      </div>
-      <div class="ui blue submit button" id="btnLogin">Login</div>
+      <div class="ui blue submit button" id="btnLogin">Next</div>
     </div>
 
 </div>
