--- a/examples/demo/views/testview/testview.html
+++ b/examples/demo/views/testview/testview.html
@@ -7,7 +7,7 @@
 
 
       <div class="header">
-        Hello <span class="welcomeName" id="welcomeName"></span>!
+        Hello <span class="welcome-name" id="welcomeName"></span>!
       </div>
       <br />
         It's good to see you again. I have had a lot to think about since our last visit, I've changed much as a person and I can see that you have too.
