--- a/source/css/mootor.scss
+++ b/source/css/mootor.scss
@@ -16,5 +16,7 @@ html, body {
 	@import "fonts";
 	@import "uipanel";
 	@import "uiheader";
+	@import "uinavbar";
+	@import "uiloading";
 	@import "utils";
 }
